# template-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: placeholder_test.py
