[tool.poetry]
name = "template-python-package"
version = "0.1.0"
description = ""
authors = ["Jeffrey Loiola <jeff.loiola@gmail.com>"]
packages = [ { include = "placeholder", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
isort = "^5.10.1"
black = "^22.3.0"
coverage = {extras = ["toml"], version = "^6.4"}
tox = "^3.25.0"
mypy = "^0.960"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = []

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = ['src/']

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

